# emoji-explainer3b83d9c6-2ad4-4550-b5c1-8f92f03aa781

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: deleteUser_service.py  explainEmoji_service.py  getUserDetails_service.py  handleError_service.py  interpretEmoji_service.py  loginUser_service.py  registerUser_service.py  server.py  updateUser_service.py
